k8s-orchestration/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capability-service
  namespace: selfservice
  labels:
    project: selfservice
    department: devex
    app: capability-service
    component: capability-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: capability-service
  template:
    metadata:
      labels:
        app: capability-service
        project: selfservice
        department: devex
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      containers:      
      - name: capability-service
        image: capability-service
        ports:
        - containerPort: 80
          name: web
        - containerPort: 8080
          name: metrics
        resources:
          requests:
            memory: "300Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "200m"
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 60
          timeoutSeconds: 5
          httpGet:
            port: web
            path: /healthz
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          httpGet:
            port: web
            path: /healthz
      - name: dbmigrations
        image: capability-service/dbmigrations
      - name: debug
        image: sequoiia/aws-playground:latest
        imagePullPolicy: Always
        command: ["sleep"]
        args: ["10d"]
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: capability-service-db
  name: capability-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capability-service-db
  template:
    metadata:
      labels:
        app: capability-service-db
    spec:
      hostname: capability-service-db
      containers:
      - image: postgres:latest
        name: db
        ports:
        - containerPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: kafka
      containers:
      - image: spotify/kafka
        name: kafka
        ports:
        - containerPort: 9092
